Fix wrapping on nav bars
- Fix for wrapping issues when text scaling >5. Closes #129

--- a/styles/hero-mancer.css
+++ b/styles/hero-mancer.css
@@ -485,6 +485,8 @@ button {
   ========================================================================== */
 
 .application.hm-app .hm-app-nav {
+  display: flex;
+  flex-flow: row wrap;
   align-items: center;
   align-self: center;
   padding-bottom: 0.4rem;
